# eag-v1

./: .gitignore  README.md
agentic_architecture/: README.md  action.py  decision.py  main.py  mcp_server.py  memory.py  perception.py  pydentic_models.py  pyproject.toml  requirements.txt
chain_of_thoughts/: README.md  cot_main.py  cot_tools.py  main.py  pyproject.toml  updated_prompt.md
chrome-extn/: background.js  content.js  manifest.json
chrome-extn-agent/: app.py  background.js  manifest.json  popup.html  popup.js
chrome-extn-gemini/: background.js  content.js  debug.js  manifest.json  styles.css
mcp-server-101/: agentic_mcp_client.py  coords_finder.py  mcp_server.py  package-lock.json  readme.md  requirements.txt
mcp-server-101/python-python/: mcp_server.py
mcp-server-101/python-ts/: mcp_client.js  package-lock.json
rag-101/: README.md  agent.py  bs4.ipynb  download_html_files.py  mcp_server_ipl.py  pyproject.toml
