[project]
name = "rag-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "faiss-cpu>=1.10.0",
    "google-genai>=1.12.1",
    "html2text>=2025.4.15",
    "lxml-html-clean>=0.4.2",
    "markdownify>=1.1.0",
    "markitdown>=0.1.1",
    "mcp[cli]>=1.6.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "readability-lxml>=0.8.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
]
